--- a/BePartner_App_Mid/Views/AD_Home/AD_Task_Complete.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/AD_Task_Complete.cshtml
@@ -18,9 +18,9 @@
 
         <div class="card-header py-3 d-sm-flex sa_align-items-center mb-4 justify-content-between ">
             <div class="card-body">
-                <a class="btn btn-outline-info ad-reg-button " href='@Url.Action("AD_Task", "AD_Home")'>
-                    Add Task
-                </a>
+                @*<a class="btn btn-outline-info ad-reg-button " href='@Url.Action("AD_Task", "AD_Home")'>
+            Add Task
+        </a>*@
                 <a class="btn btn-outline-warning ad-reg-button " href='@Url.Action("AD_Task_panding", "AD_Home")'>
                     Panding
                 </a>
