--- a/BePartner_App_Mid/Views/AD_Home/AD_Task_panding.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/AD_Task_panding.cshtml
@@ -18,9 +18,9 @@
 
         <div class="card-header py-3 d-sm-flex sa_align-items-center mb-4 justify-content-between ">
             <div class="card-body">
-                <a class="btn btn-outline-info ad-reg-button " href='@Url.Action("AD_Task", "AD_Home")'>
-                    Add Task
-                </a>
+                @*<a class="btn btn-outline-info ad-reg-button " href='@Url.Action("AD_Task", "AD_Home")'>
+            Add Task
+        </a>*@
                 <a class="btn btn-warning ad-reg-button " href='@Url.Action("AD_Task_panding", "AD_Home")'>
                     Panding
                 </a>
@@ -33,6 +33,9 @@
 
 
         <div class="card-body">
+            <a class="btn btn-info ad-reg-button " style="margin-bottom:10px;margin-top:-35px" href='@Url.Action("AD_Task", "AD_Home")'>
+                    Add Task
+                </a>
 
             @foreach (var RR in Model)
             {
