--- a/BePartner_App_Mid/Views/AD_Home/_AD_Layout.cshtml
+++ b/BePartner_App_Mid/Views/AD_Home/_AD_Layout.cshtml
@@ -139,7 +139,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="@Url.Action("AD_Task","AD_Home")">
+                <a class="nav-link" href="@Url.Action("AD_Task_panding","AD_Home")">
                     <i class="fas fa-fw fa-table"></i>
                     <span>Task</span>
                 </a>
