--- a/BePartner_App_Mid/Views/Employee/EM_layout.cshtml
+++ b/BePartner_App_Mid/Views/Employee/EM_layout.cshtml
@@ -13,7 +13,7 @@
 
     <!-- Sidebar Toggle (Topbar) -->
 
-    <a class="sidebar-brand d-flex sa_align-items-center justify-content-center " href="@Url.Action("Index","Home")">
+    <a class="sidebar-brand d-flex sa_align-items-center justify-content-center " href="@Url.Action("Index","J_Employee")">
 
         <img src="~/Img/page logo (2).png" asp-append-version="true" width="200" height="45" style="position:relative;">
     </a>
