--- a/BePartner_App_Mid/Views/J_Employee/Messege_received.cshtml
+++ b/BePartner_App_Mid/Views/J_Employee/Messege_received.cshtml
@@ -54,7 +54,7 @@
                 <div class="card border-bottom-success">
                     <br />
                     <h5>&emsp;Subject: @RR.Title</h5>
-                    <h6>&emsp;Report ID: @RR.ReportId</h6>
+                    <h6>&emsp;Messege ID: @RR.ReportId</h6>
                     <h6>&emsp;Sender: @RR.sender</h6>
                     <label>&emsp;Messege:</label>
                     <p>&emsp;@RR.Description</p>
